[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde_json = "1.0.1"
serde = { version = "1.0.188", features = ["derive"] }
directories = "0.8.4"
colored = "2.0.4"